style: fix contrast spiner style

--- a/src/shared/ui/spiner/Spiner.css
+++ b/src/shared/ui/spiner/Spiner.css
@@ -9,6 +9,7 @@
 
 .spiner._contrast {
   border-color: var(--text-contrast);
+  border-bottom-color: transparent;
 }
 
 @keyframes rotation {
